# plant-warden-api

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: plants.py
tests/: test_main.py  test_plants.py
