[tool.poetry.scripts]
start = "restapi.app:main"

[tool.poetry]
name = "plant-warden-api"
version = "0.1.0"
description = ""
authors = ["Alex Potter-Dixon <alex.potter.dixon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"
black = "^22.3.0"
uvicorn = "^0.17.6"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
bandit = "^1.7.4"
mypy = "^0.942"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
